# methods-of-data-processing-and-analysis

./: .gitignore  LICENSE  README.md  pyproject.toml
lab_1/: Lab_1.docx  lab_1.ipynb
lab_2/: Lab_2.docx  lab_2.ipynb
lab_3/: Lab_3.docx  lab_3.ipynb
